# remote-game-console

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  server.config.json5
remote_game_console/: __main__.py  audio.py  cv2_util.py  main.py  protocols.py  serial_port.py  video.py  web_server.py
remote_game_console/static/: index.html  main.js  style.css
src/: audio.ts  server.ts  video.ts
src/public/: index.js
